--- a/Curso POO Java/OlaMundo/.vscode/launch.json
+++ b/Curso POO Java/OlaMundo/.vscode/launch.json
@@ -2,6 +2,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Launch Olamundo",
+            "request": "launch",
+            "mainClass": "Olamundo",
+            "projectName": "OlaMundo_c5336f1d"
+        },
+        {
+            "type": "java",
             "name": "Launch App",
             "request": "launch",
             "mainClass": "App",
