--- a/Curso POO Java/Aula09/.vscode/settings.json
+++ b/Curso POO Java/Aula09/.vscode/settings.json
@@ -5,6 +5,9 @@
     "java.project.outputPath": "bin",
     "cSpell.words": [
         "Aniver",
+        "Autismo",
+        "Fernanda",
+        "Morena",
         "avancarpagina",
         "fazer",
         "voltarpagina"
