--- a/CURSO FLUTTER/cripto_moeda/pubspec.yaml
+++ b/CURSO FLUTTER/cripto_moeda/pubspec.yaml
@@ -23,7 +23,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  intl: 
+  intl:
+  provider: ^5.0.0
+  shared_preferences: ^2.0.6
 
 
   # The following adds the Cupertino Icons font to your application.
