--- a/CURSO FLUTTER/cripto_moeda/pubspec.yaml
+++ b/CURSO FLUTTER/cripto_moeda/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   hive: ^2.0.4
   hive_flutter: ^1.1.0
   path_provider: ^2.0.2
+  sqflite: ^2.0.0+3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
