update Settings json

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,9 +11,17 @@
     "python.testing.unittestEnabled": true,
     "cSpell.words": [
         "Alunosdb",
-        "Disciplinasdb",
+        "Canino",
         "codig",
-        "colsut"
+        "colsut",
+        "Decibeis",
+        "Disciplinasdb",
+        "domestico",
+        "Felinos",
+        "funciona",
+        "Noturna",
+        "Onça",
+        "visao"
     ],
     "git.ignoreLimitWarning": true
 }
