Criando variáveis com propriedade readonly e private

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,15 +20,18 @@
         "Decibeis",
         "Disciplinasdb",
         "domestico",
+        "Favorito",
         "Felinos",
         "funciona",
         "Funcionario",
         "Noturna",
         "Onça",
         "opcionais",
+        "propriedade",
         "redirecione",
         "Usuario",
         "usuário",
+        "utilizando",
         "visao"
     ],
     "git.ignoreLimitWarning": true
