--- a/CURSO TYPESCRIPT/package.json
+++ b/CURSO TYPESCRIPT/package.json
@@ -10,9 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/jquery": "^3.5.6",
+    "jquery": "^3.6.0",
     "parcel-bundler": "^1.12.5"
   },
   "devDependencies": {
+    "tsc": "^2.0.3",
     "typescript": "^4.4.3"
   }
 }
