--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-/CURSO TYPESCRIPT/node_modules/*
-/CURSO TYPESCRIPT/.cache/*
-/CURSO TYPESCRIPT/dist/*
+/CURSO DIO/TYPESCRIPT/node_modules/*
+/CURSO DIO/TYPESCRIPT/.cache/*
+/CURSO DIO/TYPESCRIPT/dist/*
