Criando um jogo com React

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /CURSO DIO/TYPESCRIPT/node_modules/*
+/CURSO DIO/Projeto_Appteste/node_modules/*
 /CURSO DIO/TYPESCRIPT/.cache/*
 /CURSO DIO/TYPESCRIPT/dist/*
