--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 /CURSO DIO/Projeto_Appteste/node_modules/*
 /CURSO DIO/TYPESCRIPT/.cache/*
 /CURSO DIO/TYPESCRIPT/dist/*
+/CURSO DIO/primeiro_app_reactjs/node_modules/*
