--- a/CURSO DIO/primeiro_app_reactjs/package.json
+++ b/CURSO DIO/primeiro_app_reactjs/package.json
@@ -1,36 +1,40 @@
 {
   "name": "primeiro_app_reactjs",
   "version": "1.0.0",
-  "keywords": [],  
-  "dependencies": {
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-script": "^3.0.1"
-  },
-  "devDependencies": {
-    "typescript": "^3.3.3" 
-  },
-
-  "main": "src/index.js",
+  "description": "",
+  "main": "./src/index.js",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test":  "react-scripts test --env=jsdom",
+    "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "browserslist":{
+  "devDependencies": {
+    "typescript": "^3.3.3"
+  },
+  "browserslist": {
     "production": [
       ">0.2%",
       "not dead",
       "not op_mini all"
     ],
-    "development":[
+    "development": [
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
     ]
   },
+  "development": [
+    "last 1 chrome version",
+    "last 1 firefox version",
+    "last 1 safari version"
+  ],
+  "dependencies": {
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "react-scripts": "^3.4.4",
+    "webpack": "^4.42.0"
+  },
   "author": "",
-  "license": "ISC",
-  "description": ""
+  "license": "ISC"
 }
