Finalizando introdução a Reactjs

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 /CURSO DIO/TYPESCRIPT/.cache/*
 /CURSO DIO/TYPESCRIPT/dist/*
 /CURSO DIO/primeiro_app_reactjs/node_modules/*
+/CURSO DIO/projeto_teste2_reactjs/node_modules/*
