--- a/CURSO FLUTTER/cript_moeda/pubspec.yaml
+++ b/CURSO FLUTTER/cript_moeda/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cupertino_icons: ^1.0.2
+  fl_chart: ^0.40.6
   flutter:
     sdk: flutter
   hive: ^2.0.5
