--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,5 @@
 /CURSO DIO/TYPESCRIPT/dist/*
 /CURSO DIO/primeiro_app_reactjs/node_modules/*
 /CURSO DIO/projeto_teste2_reactjs/node_modules/*
+/design-patterns-typescript/node_modules/*
 .vescode/
