iniciando projeto menu hambuergue

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@
 /design-patterns-typescript/node_modules/*
 .vescode/
 REACTNATIVE/fab-button
+/CURSO DIO/BootCamps/TQI Fullstack Developer/menu-hambuerguer/DIO-animations-aulas-master
+
+
