Bootcamp TQI FullS-tack: projeto interface componetizado com ReactJs

--- a/.gitignore
+++ b/.gitignore
@@ -8,5 +8,7 @@
 .vescode/
 REACTNATIVE/fab-button
 /CURSO DIO/BootCamps/TQI Fullstack Developer/menu-hambuerguer/DIO-animations-aulas-master
+/CURSO DIO/BootCamps/TQI Fullstack Developer/herry-potter-api-interface/node_modules
+/CURSO DIO/BootCamps/TQI Fullstack Developer/herry-potter-api-interface/.gitignore
 
 
